<resources>

    //TITULO
    <string name="app_name">QuakeNation</string>

    //SECCIONES
    <string name="title_section1">Inicio</string>
    <string name="title_section2">Artículos</string>
    <string name="title_section3">Ranking</string>
    <string name="title_section4">Reglamento</string>
    <string name="title_section5">Contacto</string>

    //INICIO
    <string name="inicio">Esta APP está orientada a los jugadores de QuakeLive que quieran estar informados sobre la comunidad, seguimiento de torneos, demos y novedades.</string>
    <string name="inicio_medio">Para reactivar un poco la comunidad se organizó un torneo llamado Re1koCon, el mismo se divide en 3 niveles separados por ELO:.</string>
    <string name="inicio_div2">Div 2 = ( - 1500 )</string>
    <string name="inicio_div1">Div 1 = ( 1500 a 1800 )</string>
    <string name="inicio_pro">PRO = ( + 1800 )</string>
    <string name="inicio_abajo">En esta APP podrás seguir los resultados, ver las demos y recibir notificaciones de los eventos.</string>
    <string name="list_pt">
         c1rca\n
        NeMes1s_ar\n
        JackFortunes\n
        Nauke\n
        bonew\n
        Cinic\n
        CroTazZo\n
        Prabuphada\n
        ffede\n
        Gwain\n
        IntruderGP\n
        MadvErick\n
        nanomo\n
        paspao\n
        Povedaa\n
        XinefNarg</string>

    <string name="list_pt_puntos">
         1\n
        2\n
        3\n
        4\n
        5\n
        6\n
        7\n
        8\n
        9\n
        10\n
        11\n
        12\n
        13\n
        14\n
        15\n
        16
    </string>

    <string name="list_pt_demos"><a href="http://www.google.com">\nlink</a></string>

    //https://www.youtube.com/watch?v=FlhAwkjIbrI

    <string name="list_mid">
         Acidlove\n
        BoomBoomKid\n
        c1rca\n
        CLuss\n
        Destr1pador\n
        fack1u\n
        fLYERa\n
        gSTRUCTOR\n
        leonazul\n
        NeMes1s_ar\n
        noghost\n
        orb1tal\n
        P4ntro\n
        raMax\n
        susoosman\n
        Tsyoyi01</string>

    <string name="list_pt_rank">

     1297\n
    1440\n
    1226\n
    1078\n
    1168\n
    1159\n
    1246\n
    1396\n
    1111\n
    1195\n
    1159\n
    1175\n
    1103\n
    1309\n
    1229\n
    1148
    </string>
     <string name="list_mid_rank">

    1614\n
1604\n
1653\n
1593\n
1527\n
1410\n
1546\n
1510\n
1492\n
1451\n
1387\n
1538\n
1653\n
1313\n
1515\n
1636
    </string>

       <string name="list_mid_puntos">
         1\n
        2\n
        3\n
        4\n
        5\n
        6\n
        7\n
        8\n
        9\n
        10\n
        11\n
        12\n
        13\n
        14\n
        15\n
        16
    </string>

       <string name="list_mid_demos">
         1\n
        2\n
        3\n
        4\n
        5\n
        6\n
        7\n
        8\n
        9\n
        10\n
        11\n
        12\n
        13\n
        14\n
        15\n
        16
    </string>

    <string name="list_pro">
         TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC\n
        TBC
       </string>

       <string name="list_pro_puntos">

         1\n
        2\n
        3\n
        4\n
        5\n
        6\n
        7\n
        8\n
        9\n
        10\n
        11\n
        12
    </string>

   <string name="list_pro_demos">
       --\n--\n--\n--\n--\n--\n--\n--\n--\n--\n--\n--
    </string>

    //CONTACTO
    <string name="quienes_somos_titulo">Hacen posible este trabajo:</string>
    <string name="quienes_somos_nombres">\n
        Re1k0: Organizacion, community Manager\n
        Paspao: Organización, túneles (VPN)\n
        FlyerA: Organizacion, stream\n
        Cinic: Desarrollo de Android App\n
        Ffede: Desarrollo de página web\n
        V1rtual: Colaborador, asesoramiento torneos\n
        Maki: Organización, asesoramiento torneos\n
        Ivan: Organización, diseño\n
        XinefNarg: Desarrollo de página web\n
        Christian E.: Diseñador\n
        Daniel R.B.: Colaborador (Brasil) (VPN)\n
        Francisco J.G.M.: Colaborador (Chile)\n
    </string>
    <string name="quienes_somos_invitamos">Invitamos a todos los interesados en colaborar, a que se suban al equipo o envíen sugerencias.</string>
    <string name="quienes_somos_sumate">SUMATE:</string>
    <string name="quienes_somos_link"><a href="http://quakenation.net/">QUAKENATION.NET</a></string>
    <string name="email"><a href="info@quakenation.net">info@quakenation.net</a></string>

    //ARTICULOS:
    <string name="config_nhd"><a href="http://quakenation.net/">nhd</a></string>
    <string name="config_doomsday"><a href="http://quakenation.net/">doomsday</a></string>
    <string name="config_maki"><a href="http://quakenation.net/">maki</a></string>
    <string name="timing_flyera">2do dígito: si pikeas en \n
0 es 5\n1 es 6\n2 es 7\n3 es 8\n4 es 9\n5 es 0\n
y funciona al revés: \n
9 es 4\n8 es 3\n7 es 2\n6 es 1\n5 es 0\n</string>
    <string name="timing_flyera2">

1er dígito:\n
        1 es 3\n2 es 4\n3 es 6\n4 es 0\n5 es 1\n0 es 2\n
entonces si pikeas en 13 seria: 2do dígito\n
        3 es 8, 1er digito 1 es 3\n</string>
    <string name="timing_flyera3">    pero deberias haberte hecho la siguiente pregunta:\n
2do dígito está entre 6 y 9?\n
        si es asi, tenes que sumar 2 al primer dígito y mecanizás
        (13 38) pero 16 no es 31… es 41
    </string>
    <string name="tuneles">/cl_currentserveraddress\n/connect sv1.quakelive.com.br:27045</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    //REGLAMENTO

    <string name="reglamento_titulo">Todas las bases y normas del torneo\n</string>
    <string name="reglamento_titulo_top">
        REGLAMENTO OFICIAL Torneo de Quake Live 1 vs 1\n Re1KoCon 2015 \n
    </string>

    <string name="reglamento_titulo_1">
        [DATOS SOBRE EL TORNEO] \n
    </string>

    <string name="reglamento_texto_1">
 - Habrá un cupo máximo para 16 jugadores.\n
- Para la inscripción deben enviar un mail a torneosquakelive@yahoo.com.ar\n
*	Nombre y Apellido: \n
*	Nick: \n
*	Link de Quake Live con su profile:\n
*	Mail: \n
*	Celular para contacto alternativo:\n
*	ELO: Puntaje (Debe ser menor a 1800)\n
* Link para verificar ELO http://qlranks.com/duel/\n\n
- Se desarrollará en 2 etapas. Primero una etapa de Grupos de 4 y luego una etapa de Brackets de eliminación directa a partir de los cuartos de final en adelante.\n
- De cada Grupo avanzaran a la etapa de llave de eliminación directa los mejores 2 clasificados. \n
- En la etapa de grupos se jugara Bo3 y en la etapa de Brackets se jugará Bo3 (Cuartos ? Semifinal y Final).\n
- Los partidos se jugarán en los servidores de Quakelive de Argentina exceptuando algún inconveniente en los mismos.\n
En Zona de grupos solo serán suficientes una demo y screenshot del partido, no hara falta un REF para empezar a jugar. Por ende se entiende que los partidos lo manejaran los mismos jugadores, arreglando horario en los días pactados por el STAFF, de no poder jugar ninguno de los 2 jugadores se les dara WO a ambos, en el caso de estar 1 presente se le dara WO automáticamente y se les dara los puntos al presente.\n
    </string>

    <string name="reglamento_titulo_1a">
[HORARIOS DE LOS PARTIDOS]\n
        </string>

    <string name="reglamento_texto_1a">
 - El torneo empezara el dia Lunes 17/08/2015.\n
Las Zonas A -B -C - D, tienen toda la semana que va del Lunes 17 al Viernes 21 de Agosto para jugar sus partidos.\n
Comprendiendo asi la primera semana de Zonas para luego el fin de semana siguiente comenzar con los brackets (Sábado 22 - 14hrs).\n
Cuartos de Final ? (1ero y 2do de la zona A y C)  (1ero y 2do de la zona B y D) - Sistema Mundial \n

Semifinal y Final se jugaran posterior a los Cuartos de Final \n

NOTA: Queda bajo criterio de los referís la importancia del imprevisto. Una vez finalizado el warmup el réferi procederá a forzar el inicio del partido.\n
    </string>

    <string name="reglamento_titulo_2">
    [MAPAS] \n
    </string>

    <string name="reglamento_texto_2">
 - CampGrounds\n
- Elder \n
- Sinister\n
- Cure \n
- Toxicity\n
    </string>

    <string name="reglamento_titulo_3">
[FORMATO DE LOS GRUPOS Y BRACKETS]\n
    </string>

    <string name="reglamento_texto_3">
 - Habrá una tabla por grupo donde aparecerán las posiciones de los participantes del torneo de acuerdo a sus puntos, en la misma también se mostraran los partidos ganados, perdidos y frags\n
- Los puntos se asignaran de la siguiente forma: \n
* 3 puntos por ronda ganada \n
* 0 puntos por ronda perdido \n
- Pasaran a la siguiente fase los dos mejores de cada grupo.\n
- En la etapa de grupos se jugara Bo3, los mapas a jugarse serán elegidos por los jugadores de la siguiente forma: D-D (D= Descarte) quedando 1 mapa elegido por c/u que será el que se deberá jugar, el tercer mapa es el que queda. Para ver qué jugador descarta y que mapa se juega primero se hará un cointoss en quakelive, el jugador que pierda comenzara el descarte.\n
- Los brackets arrancarán en cuartos de final (cuando queden 8 jugadores) y serán a eliminación directa. \n
- En los brackets se jugara Bo3, los mapas a jugarse serán elegidos por los jugadores de la siguiente forma: D-D-E-E (D= Descarte, E= Elección). Para ver qué jugador descarta y que mapa se juega primero se hará un cointoss en quakelive, el jugador que pierda comenzara el descarte. Se jugara primero el mapa del ganador del cointoss o la tirada de moneda.\n
-Para realizar el cointoss, primero los players deben determinar ?cara? o ?seca? y luego uno de ellos votará en el juego cointoss. (/callvote cointoss) \n
    </string>

    <string name="reglamento_titulo_4">
[PENALIZACIONES] \n
    </string>

    <string name="reglamento_texto_4">
 - Jugador que insulte o se pelee con los jugadores contrarios será invitado a calmarse por el réferi. De no deponer su actitud queda bajo criterio de los réferis la medida a tomar, pudiendo ser desde la pérdida del partido hasta la expulsión del torneo.\n
    </string>

    <string name="reglamento_titulo_5">
[PROHIBICIONES Y CHEATS] \n
    </string>

    <string name="reglamento_texto_5">
 - Queda totalmente prohibido el uso de cheats, scripts de timing y/o programa externo que de alguna ventaja deportiva.\n
- No están permitidos los jugadores Unnameds ni fakes, el ingreso al torneo queda a criterio de los organizadores. \n
- No se permitirá el ingreso de jugadores sospechados de cheats o que hayan sido descubiertos recientemente usando los mismos.\n
- Jugador que sea descubierto utilizando alguna de estas ventajas será expulsado del torneo de forma inmediata dejando susceptible próxima aceptación de inscripción a nuevos torneos por parte de ésta organización.\n
    </string>

    <string name="reglamento_titulo_6">
[DURANTE LOS PARTIDOS]\n
    </string>

    <string name="reglamento_texto_6">
 - El máximo de jugadores en el servidor será de 8 (2 jugadores y 1 o 2 réferis).\n
- No se permiten faltas de respeto de ningún tipo, ni a un jugador rival, ni a los réferis del torneo. De producirse alguna falta de respeto menor queda a criterio del réferi de turno la aplicación de una sanción.\n
- Están permitidas todas las configuraciones salvo los scripts que den algún tipo de ventaja deportiva (ejemplo scripts de timing). \n
- Los participantes de comprometen a adoptar una postura sanamente deportiva. \n
    </string>

    <string name="reglamento_titulo_7">
[DATOS DEL SERVIDOR] \n
    </string>

    <string name="reglamento_texto_7">
 - Gametype: Duel \n
- Time Limit: 10 \n
- Frag Limit: None \n
- Timeout Count: 3 \n
- Timeout Length: 60s\n
- Match Size: 8
    </string>



</resources>
