<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quienes_somos_titulo"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="5dp"
            android:id="@+id/textView3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/quienes_somos_nombres"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quienes_somos_invitamos"
            android:textColor="#c2c2c2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_above="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quienes_somos_link"
            android:textColor="#ff2b1d"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/textView5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:autoLink="email"
            android:linksClickable="true"
            android:text="@string/email"
            android:textColor="#ff2b1d"
            android:textStyle="bold"
            android:gravity="bottom|center"
            android:id="@+id/email"
            />

    </LinearLayout>


</LinearLayout>
