<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="Configs para bajarse:"
        android:textColor="#ffffff"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageDooms"
            android:src="@drawable/cfg_doomsday"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/config_doomsday"
            android:autoLink="web"
            android:linksClickable="true"
            android:textStyle="bold"
            android:textColor="#ff2b1a"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewNhd"
            android:src="@drawable/cfg_nhd" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/config_nhd"
            android:autoLink="web"
            android:linksClickable="true"
            android:textStyle="bold"
            android:textColor="#ff2b1a"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="2dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageMaki"
            android:src="@drawable/cfg_maki" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/config_maki"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:autoLink="web"
            android:linksClickable="true"
            android:textStyle="bold"
            android:textColor="#ff2b1a"
            android:gravity="center"/>





    </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:id="@+id/imageView4"
                android:src="@drawable/abc_popup_background_mtrl_mult"
                android:scaleType="fitXY"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Cómo timear: (by FlyerA)"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:id="@+id/textView6"
                android:gravity="center"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/timing_flyera"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:gravity="center"
            />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timing_flyera2"
                        android:textSize="16dp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        />
                </LinearLayout>

                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:text="con eso mecanizás el sistema no lo pensas ni sumas ni restas es mecánico."
                android:gravity="center"/>



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/abc_popup_background_mtrl_mult"
                android:scaleType="fitXY"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cómo usar los Túneles"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuneles"
                android:textColor="#ffffff"
                android:gravity="center"
                />






        </LinearLayout>
    </ScrollView>
</LinearLayout>
